styles.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@400;700&display=swap');

html,body{
    overflow-x: hidden;
margin:0; 


}


body { 
    font-family: 'Libre Bodoni', serif;


   
    
}

#logo { 
    position: absolute;
    left:5%; 
    top:10px; 
    font-size:24px; 
    color:rgb(236, 147, 45); 
    font-weight:bold; 
}

nav { 
    height:40px; 
    background-color: rgb(236, 236, 236);
   position:fixed; 
   top:0; 
   width:100%; 
   z-index: 1;
}
.monopoly { 
    content:url("./assets2/monscreen4-small.png"); 
    width:100%; 
}

.studyapp { 
    content:url("./assets2/studyappsmall.png"); 
    width:100%;
}

#hamburgericon{
    position: absolute;
    right:10%; 
    top:0px;  
}

.smallbutton:hover { 
    background-color: rgb(128, 238, 128);
    cursor:pointer; 
}

#mobilenavmenu { 
   
    height:100vh; 
    
    background-color: rgba(228, 132, 8, 0.1);
    width:0vw; 
    flex-direction: column; 
  
    color:black; 
    position:absolute; 
    top:40px; 
    padding-top:10%; 

    transition-duration: 1200ms;
    transition-property: width, background-color;
    ;
    transition-timing-function: ease-in;
}
a{ 
    text-decoration: none;
    color:black; 
   
    
}


#mobilenavmenu.active{
    
    display:flex; 
    width:80vw;
    left:0; 
   
    background-color: #ebf37b; 

}   

#closenav { 
    position:absolute; 
    right:20%; 
    top:0; 
    font-size:24px; 
}


#hero { 
    background-color: #7314BD;
    width:100vw;  
     height:fit-content; 
    color:white; 
    margin-top:-5%; 
    padding-top:15%; 
    padding-bottom:20%;
   margin:0; 
 
   
 
}

#hero >h1 { 
    font-size:8vw; 
    padding-left:10%; 
    padding-right:10%; 
    font-weight: bold;
}

#hero >p { 
    font-size:5vw; 
    padding-left:5%; 
    padding-right:5%; 
    font-weight: 400;
}

#contactmain{
    width:60%; 
    background-color: #FFF278;
    color:black; 
    height:40px; 
    margin-left:5%; 
}

#contactmain:hover { 
    background-color: #f0f3c4;
    cursor:pointer; 
}

.card { 
    width:90%; 
    background-color: #D9D9D9;
    height:400px; 
    margin-top:20%; 
    margin-left:5%; 
    position:relative; 
    color:black; 
    text-align: center;
  
}

.cardtop { 
    background-color: yellow;

    width:100%; 
    height:40%; 
    z-index: 0;
}

.smallbutton { 
    width:40%; 
    background-color: #127B1D;
    height:40px; 
   position: relative;
   margin-top:10%; 
   margin-left:2.5%; 
}

h2 { 
    padding-top:5%; 
}

#mockups{
    background-color: #4f005c; 
   
    width:100vw; 
    padding-top:25%; 
    height:fit-content; 
    text-align: center;
    color:white; 
    padding-bottom:25%; 
}

#screen1 { 
    content:url("./assets2/designsmall1.jpg"); 
    width:90%; 
    margin-bottom:20%; 
    margin-left:5%; 

    margin-top:15%; 
}

#screen2 { 
    content:url("./assets2/designsmall3.jpg"); 
    width:90%; 
    margin-left:5%; 
}

#about { 
    background-color: #FCFDCC;
    height:fit-content; 
    width:100%;  
    margin-top:-5%; 
    padding-top:20%;
    padding-left:5%; 
    padding-bottom:20%; 
 
    
}

#about> p { 
    padding-right:5%; 
    width:90%; 
    
}

#about >h1 { 
   
    margin-bottom:15%; 
 
   
}

#contact { 
    background-color: #7314BD;
    margin-top:-10%; 
    height:600px; 
    padding-top:20%; 
    color:white; 
    padding-bottom:20%; 
}

input { 
    display: flex;
    flex-direction: column;
    margin-top:40px; 
    width:90%; 
    
}

#sendbutton{
    width:50%; 
    background-color: green;
    height:40px; 
   
    margin-top:5%; 
    color:white; 
}

form {
 margin-left:5%; 

 
}

.icons { 
    width:90px; 
    height:90px; 
    margin-top:15%; 
    margin-left:5%; 
}

#messageinput{
    padding-bottom: 150px;  
}

#phone { 
    color:yellow; 
    font-size:20px; 
}

#links { 
    display:none; 
}

#mobilelinks { 
    display:none; 
}




@media (min-width:900px){
  
#screen1 { 
    content:url("/assets2/design1.jpg")
}

#screen2 { 
    content:url("/assets2/design3.jpg")
}


#mockups>h1 { 
    font-size:4vw; 
    
}

#mockups { 
    padding-top:90px; 
}

    #hero { 
        padding-top:90px; 
        height:120vh; 
    }
    
    #hero >h1 { 
        font-size: 4.5vw; 
        width:50%; 
        padding-top:0px;  
        font-weight: 900; 
        padding-left:5%; 
    }

    nav { 
        height:50px; 
        display:flex; 
        justify-content: center;
        padding-top:20px; 
        
        
    }

    #links { 
        position:absolute;
        right:5%; 
       display: flex;
     
       
    }

    #hamburgericon{
        display:none; 
    }

    a:hover { 
        color:rgb(105, 9, 160); 
    }
    #hero > p { 
        font-size: 2vw; 
         width:50%; 
         padding-left:5%; 
    }
    
    #contactmain { 
        margin-left:5%; 
        width:30%; 
        font-weight: 900;
        margin-top:60px; 
       
    }

    .top { 
     position:absolute; 
     top:-20%;
     right:10%; 
     width:25%; 
     height:60vh;  

    }

    .bottom { 
        position:absolute; 
        top:60%;
        right:10%; 
        width:25%; 
        height:60vh;  
        z-index: 0;
       }

       .screen{
        width:100%; 
       }

       .icons { 
        width:134px; 
        height:134px; 
        
       }

       #iconswrapper{
        position:absolute; 
       
       margin-top:10%;
       width:50%; 
       display:flex;
       justify-content: space-evenly; 
       }

       h1 { 
        font-size:5vw; 
       }

       #about { 
        padding-top:90px; 
        text-align: center;
        padding-left:0%; 
       
       }

       #paragraph-wrapper{
       
        width:80%; 
        padding-left:10%;
        
       }

       #about>h1 { 
        margin-bottom:60px; 
       
        padding:0; 
        margin-left:0; 
        padding-left:0; 
       }

       p { 
        text-align: left;
        font-size:2.5vw; 

       }

       #contact { 
        padding-top:90px; 
        text-align: center;
       }

       form { 
        width:40%; 
        background-color: #5d0f99;
        margin-left:25%; 
        padding-left:90px; 
        padding-right:90px; 
      
        padding-top:60px; 
        padding-bottom:60px; 
        border-radius: 5%;
       }

       #sendbutton:hover { 
        background-color: rgb(107, 202, 107);
        cursor:pointer; 
        
       }

 

       #sendbutton { 
        width:50%; 
       }
       
}

